--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,23 +4,38 @@ publish_to: 'none'
 version: 0.1.0+1
 
 environment:
-  sdk: ">=3.3.0 <4.0.0"
+  sdk: ">=3.9.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  # Firebase Core y servicios
+  # 🔹 Gráficos
+  fl_chart: ^0.68.0
+
+  # 🔹 Mapas (versión moderna y totalmente compatible)
+  flutter_map: ^7.0.2
+  latlong2: ^0.9.0
+  flutter_map_heatmap: ^0.0.8
+  flutter_map_marker_popup: ^7.0.0   # ✅ corregido: compatible con flutter_map 7.x
+
+  # 🔹 Geolocalización
+  geolocator: ^13.0.1
+  geocoding: ^3.0.0
+
+  # 🔹 Firebase
   firebase_core: ^3.5.0
   firebase_auth: ^5.3.1
   cloud_firestore: ^5.4.3
   firebase_storage: ^12.3.1
 
-  # Imagen y edición
-  image_picker: ^1.1.2
-  flutter_quill: ^11.4.2
+  # 🔹 Imágenes
+  image_picker: ^0.8.7+5
   flutter_image_compress: ^2.4.0
-  path_provider: ^2.0.16
+  path_provider: ^2.1.3   # ✅ actualizado
+
+  # 🔹 Utilidades y diseño
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
@@ -31,4 +46,4 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/
+    - assets/images/logo_login.png
