--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,31 +10,31 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # 🔹 Gráficos
+  # graficos
   fl_chart: ^0.68.0
 
-  # 🔹 Mapas (versión moderna y totalmente compatible)
+  # mapas
   flutter_map: ^7.0.2
   latlong2: ^0.9.0
   flutter_map_heatmap: ^0.0.8
-  flutter_map_marker_popup: ^7.0.0   # ✅ corregido: compatible con flutter_map 7.x
+  flutter_map_marker_popup: ^7.0.0   
 
-  # 🔹 Geolocalización
+  # localizacion
   geolocator: ^13.0.1
   geocoding: ^3.0.0
 
-  # 🔹 Firebase
+  # firebase
   firebase_core: ^3.5.0
   firebase_auth: ^5.3.1
   cloud_firestore: ^5.4.3
   firebase_storage: ^12.3.1
 
-  # 🔹 Imágenes
+  # imagenes
   image_picker: ^0.8.7+5
   flutter_image_compress: ^2.4.0
-  path_provider: ^2.1.3   # ✅ actualizado
+  path_provider: ^2.1.3   
 
-  # 🔹 Utilidades y diseño
+  # link
   url_launcher: ^6.3.0
 
 dev_dependencies:
